--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
 	<title>DevOps Essentials Sample App</title>
 </head>
-<body style="background-color: #1A729D;">
+<body style="background-color: pink">
     <h1 style="font-family: Courier; color: #434342; font-size: 48px; text-align: center;">
-        DevOps is meh!
+        DevOps is Pink!
     </h1>
 </body>
 </html>
